--- a/app/src/main/res/layout/recipe_row.xml
+++ b/app/src/main/res/layout/recipe_row.xml
@@ -10,29 +10,36 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:id="@+id/imageView_recipe_thumbnail"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher_my_foreground" />
 
     <TextView
         android:id="@+id/textView_recipe_title"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginStart="23dp"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
         android:text="Naslov recepta"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView_recipe_thumbnail"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView_recipe_ingredients"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Sastojci:"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Click for details..."
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView_recipe_thumbnail"
         app:layout_constraintTop_toBottomOf="@+id/textView_recipe_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
