--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -64,5 +64,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ingredients_textView" />
+
+    <Button
+        android:id="@+id/findStore_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Shop for ingredients nearby!"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recipeText_textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
