--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -42,9 +42,11 @@
 
         <TextView
             android:id="@+id/recipeTitle_textView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:text="TextView"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/recipe_imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/recipe_imageView"
@@ -65,6 +67,7 @@
             android:id="@+id/findStore_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="1dp"
             android:text="Shop for ingredients nearby!"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -74,8 +77,8 @@
 
         <RatingBar
             android:id="@+id/ratingBar"
-            android:layout_width="200dp"
-            android:layout_height="44dp"
+            android:layout_width="244dp"
+            android:layout_height="50dp"
             android:layout_marginTop="36dp"
             android:numStars="5"
             app:layout_constraintBottom_toTopOf="@id/button_rate"
@@ -87,7 +90,7 @@
             android:id="@+id/button_rate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:text="Rate this recipe!"
             app:layout_constraintBottom_toTopOf="@id/findStore_button"
             app:layout_constraintEnd_toEndOf="parent"
