--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     android:background="#FDEA6C">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/not_registered_textview_login"
+        app:srcCompat="@mipmap/ic_launcher2_my_circle_foreground" />
+
     <EditText
         android:id="@+id/username_edittext_login"
         android:layout_width="0dp"
@@ -15,7 +25,7 @@
         android:layout_marginEnd="24dp"
         android:background="@android:color/background_light"
         android:ems="10"
-        android:hint="Username"
+        android:hint="E-mail"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
