--- a/app/src/main/res/layout/recipe_row.xml
+++ b/app/src/main/res/layout/recipe_row.xml
@@ -52,6 +52,7 @@
         android:layout_height="41dp"
         android:scaleX="0.3"
         android:scaleY="0.3"
+        android:isIndicator="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView_recipe_thumbnail" />
