--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimary">#FF9800</item>
         <item name="colorPrimaryDark">#FF9800</item>
         <item name="colorAccent">#FF9800</item>
+        <item name="android:navigationBarColor">#FF9800</item>
+
     </style>
 
 </resources>
